; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_asn1_put_uint64.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_asn1_put_uint64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i32)* @asn1_put_uint64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @asn1_put_uint64(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 4, i64* %5, align 8
  br label %6

6:                                                ; preds = %13, %2
  %7 = load i32, i32* %4, align 4
  %8 = trunc i32 %7 to i8
  %9 = load i8*, i8** %3, align 8
  %10 = load i64, i64* %5, align 8
  %11 = add i64 %10, -1
  store i64 %11, i64* %5, align 8
  %12 = getelementptr inbounds i8, i8* %9, i64 %11
  store i8 %8, i8* %12, align 1
  br label %13

13:                                               ; preds = %6
  %14 = load i32, i32* %4, align 4
  %15 = ashr i32 %14, 8
  store i32 %15, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %6, label %17

17:                                               ; preds = %13
  %18 = load i64, i64* %5, align 8
  ret i64 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
